--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.mp3 filter=lfs diff=lfs merge=lfs -text
 *.html filter=lfs diff=lfs merge=lfs -text
 *.css filter=lfs diff=lfs merge=lfs -text
+*.gif filter=lfs diff=lfs merge=lfs -text
