--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.html filter=lfs diff=lfs merge=lfs -text
 *.css filter=lfs diff=lfs merge=lfs -text
 *.gif filter=lfs diff=lfs merge=lfs -text
+final_comp.gif filter=lfs diff=lfs merge=lfs -text
